contrib/ray/raycluster_istio_auth_policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: allow-all
 namespace: kubeflow
spec:
 rules:
 - {}
